<resources>
    <string name="app_name">天坦倒计时</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="countdown">倒计时</string>
    <string name="setting">设置</string>
    <string name="start">开始计时</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="stop">结束</string>
    <string name="countdown_set">倒计时设置</string>
    <string name="interval_set">时间间隔设置</string>
    <string name="ringing_set">铃声设置</string>
    <string name="model_set">播放模式设置</string>
    <string name="time_1">1分钟</string>
    <string name="time_5">5分钟</string>
    <string name="time_10">10分钟</string>
    <string name="time_15">15分钟</string>
    <string name="time_20">20分钟</string>
    <string name="time_30">30分钟</string>
    <string name="time_45">45分钟</string>
    <string name="time_hour_1">1小时</string>
    <string name="time_hour_1_1">1.5小时</string>
    <string name="time_hour_2">2小时</string>
    <string name="custom">自定义</string>
    <string name="custom_set">自定义时间设置</string>
    <string name="custom_time">自定义时间</string>
    <string name="add_countdown_scheme">添加倒计时</string>
    <string name="del_countdown_scheme">删除倒计时</string>
    <string name="join_massage_set">加入按摩统计</string>
    <string name="time_statistics">本月按摩时间统计:</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
</resources>
