<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/lyt_time_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/time_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/time_1"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_tick_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/img_white_tick" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@drawable/img_cutoff_long" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lyt_time_5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/time_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/time_5"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_tick_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/img_white_tick" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@drawable/img_cutoff_long" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lyt_time_10"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/time_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/time_10"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_tick_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/img_white_tick" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@drawable/img_cutoff_long" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lyt_time_15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/time_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/time_15"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_tick_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/img_white_tick" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@drawable/img_cutoff_long" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lyt_time_30"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/time_30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/time_30"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_tick_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/img_white_tick" />

            <ImageView
                android:id="@+id/img_time_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@drawable/img_cutoff_long" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lyt_time_45"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/time_45">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/time_45"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_tick_45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/img_white_tick" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@drawable/img_cutoff_long" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lyt_time_hour_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/time_hour_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/time_hour_1"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_tick_hour_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/img_white_tick" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@drawable/img_cutoff_long" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lyt_time_hour_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/time_hour_2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/time_hour_2"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_tick_hour_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/img_white_tick" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@drawable/img_cutoff_long" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lyt_custom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/custom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/custom"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_tick_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/img_white_tick" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
